# simplepubsub

./: README.md  pyproject.toml  setup.cfg  tasks.py
docs/: .gitignore  conf.py  index.rst
simplepubsub/: __init__.py  subscription.py
tests/: test_simplepubsub.py  test_subscription.py  test_tinypubsub.py
tests/simple/: test_publisher.py
tests/weakref/: test_publisher.py
tinypubsub/: __init__.py  publisher.py  subscription.py
