[tool.poetry]
name = "simplepubsub"
version = "1.0.0"
license = "MIT"
description = "Simple Pub/Sub pattern implementation"
authors = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
# maintainers = []
readme = "README.md"
homepage = "https://github.com/nekonoshiri/simplepubsub"
repository = "https://github.com/nekonoshiri/simplepubsub"
# documentation = ""
# keywords = []
# classifiers = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
invoke = "^1.4.1"
isort = "^5.6.4"
mypy = "^0.790"
pydocstyle = "^5.1.1"
pytest = "^6.1.1"
sphinx = "^3.2.1"
sphinx_rtd_theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

